test/classes/vass/ref-like-intents/out-subclass.good
out-subclass.chpl:14: error: Cannot assign to borrowed D? from owned C?
